--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>fr.scriptis.simplechess</groupId>
-    <artifactId>SimpleChess</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>fr.example.robotricochet</groupId>
+    <artifactId>RobotRicochet</artifactId>
+    <version>1.0.0</version>
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
